@@ -242,8 +242,9 @@ struct _GpgCtx {
 	GByteArray *diagnostics;
 	
 	unsigned int complete:1;
-	unsigned int await_read:1;
-	unsigned int reading:1;
+	unsigned int await_read_stdout:1;
+	unsigned int await_read_stderr:1;
+	unsigned int seen_eof:1;
 	unsigned int always_trust:1;
 	unsigned int armor:1;
 	unsigned int need_passwd:1;
@@ -254,7 +255,7 @@ struct _GpgCtx {
 	unsigned int validsig:1;
 	unsigned int trust:3;
 	
-	unsigned int padding:19;
+	unsigned int padding:18;
 };
 
 static struct _GpgCtx *
@@ -268,8 +269,9 @@ gpg_ctx_new (GMimeSession *session, const char *path)
 	g_object_ref (session);
 	gpg->userid_hint = g_hash_table_new (g_str_hash, g_str_equal);
 	gpg->complete = FALSE;
-	gpg->await_read = FALSE;
-	gpg->reading = FALSE;
+	gpg->await_read_stdout = FALSE;
+	gpg->await_read_stderr = FALSE;
+	gpg->seen_eof = FALSE;
 	gpg->pid = (pid_t) -1;
 	
 	gpg->path = g_strdup (path);
@@ -779,7 +781,8 @@ gpg_ctx_parse_status (struct _GpgCtx *gpg, GMimeException *ex)
 		case GPG_CTX_MODE_SIGN:
 			if (!strncmp (status, "SIG_CREATED ", 12)) {
 				gpg->complete = TRUE;
-				gpg->await_read = TRUE;
+				gpg->await_read_stdout = TRUE;
+				gpg->await_read_stderr = FALSE;
 			}
 			break;
 		case GPG_CTX_MODE_VERIFY:
@@ -807,10 +810,15 @@ gpg_ctx_parse_status (struct _GpgCtx *gpg, GMimeException *ex)
 				gpg->validsig = FALSE;
 				gpg->complete = TRUE;
 			}
+			
+			gpg->await_read_stdout = FALSE;
+			gpg->await_read_stderr = TRUE;
+			
 			break;
 		case GPG_CTX_MODE_ENCRYPT:
 			if (!strncmp (status, "BEGIN_ENCRYPTION", 16)) {
-				gpg->await_read = TRUE;
+				gpg->await_read_stdout = TRUE;
+				gpg->await_read_stderr = FALSE;
 			} else if (!strncmp (status, "END_ENCRYPTION", 14)) {
 				gpg->complete = TRUE;
 			} else if (!strncmp (status, "NO_RECP", 7)) {
@@ -821,7 +829,8 @@ gpg_ctx_parse_status (struct _GpgCtx *gpg, GMimeException *ex)
 			break;
 		case GPG_CTX_MODE_DECRYPT:
 			if (!strncmp (status, "BEGIN_DECRYPTION", 16)) {
-				gpg->await_read = TRUE;
+				gpg->await_read_stdout = TRUE;
+				gpg->await_read_stderr = FALSE;
 			} else if (!strncmp (status, "END_DECRYPTION", 14)) {
 				gpg->complete = TRUE;
 			}
@@ -922,14 +931,16 @@ gpg_ctx_op_step (struct _GpgCtx *gpg, GMimeException *ex)
 	   can to all of them. If one fails along the way, return
 	   -1. */
 	
-	if (FD_ISSET (gpg->status_fd, &rdset) && !gpg->complete) {
+	if (FD_ISSET (gpg->status_fd, &rdset)) {
 		/* read the status message and decide what to do... */
 		char buffer[4096];
 		ssize_t nread;
 		
 		d(printf ("reading from gpg's status-fd...\n"));
 		
-		nread = read (gpg->status_fd, buffer, sizeof (buffer));
+		do {
+			nread = read (gpg->status_fd, buffer, sizeof (buffer));
+		} while (nread == -1 && (errno == EINTR || errno == EAGAIN));
 		if (nread == -1)
 			goto exception;
 		
@@ -941,25 +952,23 @@ gpg_ctx_op_step (struct _GpgCtx *gpg, GMimeException *ex)
 		}
 	}
 	
-	gpg->reading = FALSE;
 	if (FD_ISSET (gpg->stdout, &rdset) && gpg->ostream) {
 		char buffer[4096];
 		ssize_t nread;
 		
 		d(printf ("reading gpg's stdout...\n"));
 		
-		nread = read (gpg->stdout, buffer, sizeof (buffer));
+		do {
+			nread = read (gpg->stdout, buffer, sizeof (buffer));
+		} while (nread == -1 && (errno == EINTR || errno == EAGAIN));
 		if (nread == -1)
 			goto exception;
 		
 		if (nread > 0) {
 			if (g_mime_stream_write (gpg->ostream, buffer, (size_t) nread) == -1)
 				goto exception;
-			
-			gpg->await_read = FALSE;
-			
-			/* make sure we don't exit before reading all the data... */
-			gpg->reading = TRUE;
+		} else if (gpg->await_read_stdout) {
+			gpg->seen_eof = TRUE;
 		}
 	}
 	
@@ -969,11 +978,17 @@ gpg_ctx_op_step (struct _GpgCtx *gpg, GMimeException *ex)
 		
 		d(printf ("reading gpg's stderr...\n"));
 		
-		nread = read (gpg->stderr, buffer, sizeof (buffer));
+		do {
+			nread = read (gpg->stderr, buffer, sizeof (buffer));
+		} while (nread == -1 && (errno == EINTR || errno == EAGAIN));
 		if (nread == -1)
 			goto exception;
 		
-		g_byte_array_append (gpg->diagnostics, buffer, nread);
+		if (nread > 0) {
+			g_byte_array_append (gpg->diagnostics, buffer, nread);
+		} else if (gpg->await_read_stderr) {
+			gpg->seen_eof = TRUE;
+		}
 	}
 	
 	if (wrsetp && gpg->passwd_fd != -1 && FD_ISSET (gpg->passwd_fd, &wrset) && gpg->need_passwd && gpg->send_passwd) {
@@ -1075,7 +1090,7 @@ gpg_ctx_op_step (struct _GpgCtx *gpg, GMimeException *ex)
 static gboolean
 gpg_ctx_op_complete (struct _GpgCtx *gpg)
 {
-	return gpg->complete && !gpg->await_read && !gpg->reading;
+	return gpg->complete && /*!gpg->await_read &&*/ gpg->seen_eof;
 }
 
 static void
@@ -1188,7 +1203,7 @@ swrite (GMimeStream *istream)
 	char *template;
 	int fd, ret;
 	
-	template = g_strdup ("/tmp/evolution-pgp.XXXXXX");
+	template = g_strdup ("/tmp/gmime-pgp.XXXXXX");
 	fd = mkstemp (template);
 	if (fd == -1) {
 		g_free (template);
